@@ -9,6 +9,7 @@ seahorse 0.7.2
 	* Key manager toolbar and column preferences
 	* General interface updates
 	* Nicer passphrase entry dialog
+	* Nicer change passphrase dialog
 
 seahorse 0.7.1
 --------------
