@@ -1,3 +1,9 @@
+2003-03-12  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* seahorse-passphrase: Added change passphrase glade dialog & function
+	to address bug 107408
+	* seahorse-ops-key: Updated ::change_passphrase to use new dialog
+
 2003-03-11  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* seahorse-context:
